# qt.mini-sensor-monitor

./: .gitignore  CMakeLists.txt  Makefile  README.md  configutil.h  main.cpp  minifloatingicon.cpp  minifloatingwindow.cpp  minifloatingwindow.ui  resources.qrc  sensorsconfig.h  sensorsettingdialog.cpp  sensorsettingdialog.h  sensorsettingdialog.ui  sensorsmanager.cpp  sensorsmanager.h  sensorsmonitor.cpp  sensorsmonitor.h  sensorsworker.cpp  sensorsworker.h  simplesensormonitor.cpp
cmake/: SparkAppimageConfig.cmake  SparkDesktopMacros.cmake  spark-deb-package.descript
resources/: resources.qrc
src/: main.cpp  sensorsconfig.cpp  sensorsmonitor.cpp
src/manager/: sensorsmanager.h  sensorsworker.cpp
src/monitor/: simplesensormonitor.cpp  simplesensormonitor.h
src/util/: configutil.cpp
src/view/dialog/: sensorsettingdialog.cpp  sensorsettingdialog.ui
src/view/widget/: minifloatingicon.cpp  minifloatingicon.h  minifloatingwindow.cpp  minifloatingwindow.h
